--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,28 +3,33 @@ body {
   font-family: 'Encode Sans Semi Condensed', sans-serif;
 }
 
-.title {
+h1 {
   color: black;
-  font-family: 'Playfair Display', serif;
-  font-weight: 100;
-  font-size: x-large;
-  background-color: rgba(255, 255, 255, 0.2);
+  font-style: uppercase;
+  font-family: 'Encode Sans Semi Condensed', sans-serif !important;
+  font-weight: 50;
+  font-size: medium;
   text-align: center;
-  margin: 20% 25% 20% 25%;
-  letter-spacing: 2px;
+  letter-spacing: 5px;
 }
 
+.vertical-align {
+  min-height: 100%;
+
+  display: flex;
+  align-items: center;
+}
 
 /* INDEX */
 .main-logo {
   background: url(photos/logo/HersheyRendonPhotography-02.png) no-repeat center center;
-  height: 100vh;
+  height: 70vh;
   width: 100%;
   margin-top: 60px;
 }
 
-.logo {
-  
+a:hover {
+  cursor: pointer;
 }
 
 
@@ -33,7 +38,7 @@ body {
   background-color: white;
   box-shadow: 0px 3px 3px #888888;
   border-top-style: solid;
-  border-top: thick solid rgb(77, 158, 58);
+  border-top: thick solid rgb(250, 240, 230);
 }
 
 #menu {
@@ -62,15 +67,6 @@ body {
   color: black;
 }
 
-h1 {
-  color: black;
-  font-size: medium;
-  font-family: 'Playfair Display', serif;
-  text-align: center;
-  letter-spacing: 2px;
-  padding-top: 50px;
-}
-
 .description {
   text-align: center;
   font-size: small;
@@ -79,7 +75,9 @@ h1 {
 
 
 /* SOCIAL MEDIA MENU */
-
+.social-media-links {
+  padding: 25px 0;
+}
 
 .fb-logo {
   height: 28px;
@@ -100,9 +98,9 @@ h1 {
 
 .profile-div {
   background-color: lightgrey;
-  height: 300px;
+  height: 400px;
   overflow: hidden;
-  margin: auto;
+  margin: 2px;
 }
 
 .dp-container {
@@ -112,21 +110,31 @@ h1 {
 
 .about-me-container {
   float: left;
+  padding: 10px;
 }
 
 .profile-pic {
   border-radius: 50%;
-  padding: 50px;
+  padding: 0 20%;
 }
 
 .about-me-title {
-  padding: 10px;
-  letter-spacing: 1px;
+   padding: 10px;
+  font-size: 3em;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  line-height: 1.5em;
 }
 
 .about-me-text {
-  text-align: center;
+    font-family: proxima-nova, sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.8;
+  letter-spacing: .03em;
   padding: 10px;
+  padding-right: 100px;
 }
 
 
@@ -159,6 +167,19 @@ h1 {
   margin: auto;
 }
 
+.img-container.vignette::after {
+  content: '';
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 120%;
+  padding-bottom: 120%;
+  box-shadow: inset 0px 0px 200px 60px rgba(250,250,250,0.8);
+  border-radius: 50%;
+}
+
 .photo-table {
   margin: 0 auto;
   width: 80%;
@@ -180,12 +201,37 @@ th {
   cursor: pointer;
 }
 
+#modal-img {
+  height: 100%;
+  width: 100%;
+}
+
 
 /* CONTACT ME */
 
 .contact-div {
   height: 300px;
-  padding: 50px;
+  color: black;
   display: inline-block;
   background-color: grey;
+  text-align: center;
+}
+
+.contact-title {
+  padding: 25px 0;
+  font-size: 3em;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  line-height: 1.5em;
+}
+
+.contact-details {
+  font-family: proxima-nova, sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.8;
+  letter-spacing: .03em;
+  text-align: left;
+  margin-left: 9px;
 }
