--- a/stylesheet.css
+++ b/stylesheet.css
@@ -145,17 +145,8 @@ a:hover {
 .portfolio-div {
   text-align: center;
   background-color: white;
-
- 
-}
-
-.portfolio-title {
-  top: 50%;
-  letter-spacing: 3px;
-  height: 200px;
-  color: lightgrey;
-  opacity: 50;
-  padding: 20px;
+  border-top-style: solid;
+  border-top: thin solid black;
 }
 
 .img-container {
@@ -180,7 +171,8 @@ a:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 120%;
-  padding-bottom: 120%;
+  height: 120%;
+  padding: 0 120% 120% 0;
   box-shadow: inset 0px 0px 200px 60px rgba(250,250,250,0.8);
   border-radius: 50%;
 }
